Overflow Fix
Fixed the text so that text doesn't break in the text box

--- a/Project/styles.css
+++ b/Project/styles.css
@@ -154,6 +154,7 @@ img {
   min-height: 80px;
   box-sizing: border-box;
   overflow: hidden;
+  white-space: inherit;
 }
 
 .form-group textarea:focus {
